--- a/mewmont/Views/LoginPage.xaml
+++ b/mewmont/Views/LoginPage.xaml
@@ -62,23 +62,24 @@
             <Button Text="Register"
                     Pressed="RegisterBtn_Pressed"
                     TextColor="White"
+                    WidthRequest="200"
                     BackgroundColor="Transparent"
-                    RelativeLayout.XConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.08, Constant=0}"
+                    RelativeLayout.XConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.5, Constant=-100}"
                     RelativeLayout.YConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Height,Factor=.7,Constant=0}"
-                    RelativeLayout.WidthConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width,Factor=0.7,Constant=0}"
                     HeightRequest="40" />
-            <Label Text="OR"
-                   TextColor="White" 
+            <Label Text="or"
+                   TextColor="Gray" 
+                   WidthRequest="200"
                    HorizontalTextAlignment="Center"
-                   RelativeLayout.XConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.75, Constant=-100}"
-                   RelativeLayout.YConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=0.715, Constant=0}"/>
-            <Button Text="SKIP"
+                   RelativeLayout.XConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.5, Constant=-100}"
+                   RelativeLayout.YConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=0.78, Constant=0}"/>
+            <Button Text="Skip"
                     Pressed="SkipBtn_Tapped"
-                    TextColor="DimGray"
+                    TextColor="Gray"
+                    WidthRequest="200"
                     BackgroundColor="Transparent"
-                    RelativeLayout.XConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.26, Constant=0}"
-                    RelativeLayout.YConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Height,Factor=.7,Constant=0}"
-                    RelativeLayout.WidthConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width,Factor=0.7,Constant=0}"
+                    RelativeLayout.XConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.5, Constant=-100}"
+                    RelativeLayout.YConstraint = "{ConstraintExpression Type=RelativeToParent, Property=Height,Factor=.8,Constant=0}"
                     HeightRequest="40" />
 
             <Image Source="vid_btm_pv.png"
