--- a/mewmont/Views/JoinPrivateStreamPage.xaml
+++ b/mewmont/Views/JoinPrivateStreamPage.xaml
@@ -7,37 +7,23 @@
         <StackLayout Padding="10, 0" BackgroundColor="{StaticResource PanelBackgroundColor}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
             <Label Text="&#x0A;Join a current Stream &#x0A;"
                    HorizontalOptions="Center" 
-                   TextColor="White"
+                   TextColor="{StaticResource TextColor}"
                    FontAttributes="Bold"/>
-            <Label Text="&#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A;Stream link that has been provided to you:"
+            <Label Text="&#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A; &#x0A;Enter a private room passkey"
                    HorizontalOptions="Center"
-                       TextColor="White"/>
-            <Entry PlaceholderColor="White"/>
-            
+                       TextColor="{StaticResource TextColor}"/>
+            <Entry x:Name="PasskeyEntry"  
+                   TextColor="{StaticResource TextColor}"
+                   PlaceholderColor="White"/>
+
             <Label Text="&#x0A; &#x0A; &#x0A; &#x0A; &#x0A;By clicking start, you hearby declare that you are responsible for the content you share to other users and this platform. If any prohibited content is showed and legal action is taken then you will be responsible according to your country's laws. You also hearby agree that you are responsible for any third-party ads are shown in the stream (from the video) and Streamr will not be held responsible, should there be any legal issues and action takes place."
                    TextColor="White"/>
-            <Grid ColumnSpacing="20">
-                  <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                  </Grid.RowDefinitions>
-                  <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                  </Grid.ColumnDefinitions>
-                  <Button
-                    Text="Cancel"
-                    BackgroundColor="Silver"
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    HorizontalOptions="Center"/>
-                 <Button
+            <Button Pressed="EnterBtn_Pressed"
                     Text="Start"
                     FontSize="Small"
-                    BackgroundColor="Silver"
-                    Grid.Row="1"
-                    Grid.Column="1"
+                    TextColor="{StaticResource TextColor}"
+                    BackgroundColor="{StaticResource SecondaryButtonColor}"
                     HorizontalOptions="Center"/>
-              </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
